# py-pluralsingular

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pluralsingular/: __init__.py
src/pluralsingular/lang/: de.py  el.py  en.py  es.py  gl.py  it.py  nl.py  pt.py  ru.py  uk.py
tests/: data.txt  nouns_es.txt  test_words.py
